--- a/evothings/rfglow-ble/bower.json
+++ b/evothings/rfglow-ble/bower.json
@@ -2,7 +2,10 @@
   "name": "rfglow-ble",
   "private": "true",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.1.0",
+    "ionic": "driftyco/ionic-bower#1.3.3",
     "ionic-platform-web-client": "~0.2.1"
+  },
+  "dependencies": {
+    "ng-rollbar": "^1.9.2"
   }
 }
