--- a/evothings/rfglow-ble/package.json
+++ b/evothings/rfglow-ble/package.json
@@ -1,35 +1,54 @@
 {
-  "name": "rfglow-ble",
-  "version": "1.0.1",
-  "description": "rfglow-ble: An Ionic project",
-  "dependencies": {
-    "gulp": "^3.5.6",
-    "gulp-sass": "^2.0.4",
-    "gulp-concat": "^2.2.0",
-    "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
-  },
-  "devDependencies": {
-    "bower": "^1.3.3",
-    "gulp-util": "^2.2.14",
-    "shelljs": "^0.3.0"
-  },
-  "cordovaPlugins": [
-    "ionic-plugin-deploy",
-    "cordova-plugin-splashscreen",
-    "ionic-plugin-keyboard",
-    "cordova-plugin-device",
-    "cordova-plugin-console",
-    "cordova-plugin-dialogs",
-    "cordova-plugin-ble",
-    "cordova-plugin-legacy-whitelist",
-    "cordova-plugin-statusbar",
-    {
-      "locator": "https://github.com/testfairy/testfairy-cordova-plugin",
-      "id": "com.testfairy.cordova-plugin"
+    "name": "rfglow-ble",
+    "version": "1.0.1",
+    "description": "rfglow-ble: An Ionic project",
+    "dependencies": {
+        "@ionic/cloud": "^0.16.0",
+        "com.testfairy.cordova-plugin": "^2.1.9",
+        "cordova-plugin-console": "^1.0.7",
+        "gulp": "^3.5.6",
+        "gulp-concat": "^2.2.0",
+        "gulp-minify-css": "^0.3.0",
+        "gulp-rename": "^1.2.0",
+        "gulp-sass": "^2.0.4",
+        "ionic-plugin-deploy": "^0.6.7",
+        "resgrid-cordova-plugins-rollbar": "git+https://github.com/emilyemorehouse/cordova-plugins-rollbar.git"
+    },
+    "devDependencies": {
+        "@ionic/cli-plugin-cordova": "1.4.0",
+        "@ionic/cli-plugin-gulp": "1.0.1",
+        "@ionic/cli-plugin-ionic1": "2.0.0",
+        "bower": "^1.3.3",
+        "gulp-util": "^2.2.14",
+        "shelljs": "^0.3.0"
+    },
+    "cordovaPlugins": [
+        "ionic-plugin-deploy",
+        "cordova-plugin-splashscreen",
+        "ionic-plugin-keyboard",
+        "cordova-plugin-device",
+        "cordova-plugin-console",
+        "cordova-plugin-dialogs",
+        "cordova-plugin-ble",
+        "cordova-plugin-legacy-whitelist",
+        "cordova-plugin-statusbar",
+        {
+            "locator": "https://github.com/testfairy/testfairy-cordova-plugin",
+            "id": "com.testfairy.cordova-plugin"
+        }
+    ],
+    "cordovaPlatforms": [
+        "ios"
+    ],
+    "cordova": {
+        "plugins": {
+            "com.testfairy.cordova-plugin": {},
+            "cordova-plugin-console": {},
+            "resgrid.cordova.plugins.rollbar": {
+                "ROLLBAR_ACCESS_TOKEN": "47b865ea232f4c1389f6dbb30a3a4d7a",
+                "ROLLBAR_ENVIRONMENT": "rfglow-ble"
+            },
+            "ionic-plugin-deploy": {}
+        }
     }
-  ],
-  "cordovaPlatforms": [
-    "ios"
-  ]
 }
