Cloud Firestore based button config complete

--- a/android/BladeBLEWear/app/build.gradle
+++ b/android/BladeBLEWear/app/build.gradle
@@ -4,8 +4,8 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "pw.rfg.bladeblewear"
-        minSdkVersion 25
-        targetSdkVersion 27
+        minSdkVersion 24
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
     }
@@ -15,21 +15,27 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    dataBinding.enabled = true
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.google.android.support:wearable:2.3.0'
-    implementation 'com.google.android.gms:play-services-wearable:15.0.1'
-    implementation 'com.google.firebase:firebase-core:15.0.2'
+    //implementation 'com.google.android.gms:play-services-wearable:15.0.1'
+    //implementation 'com.google.firebase:firebase-core:15.0.2'
     implementation 'com.google.firebase:firebase-firestore:16.0.0'
     implementation 'com.android.support:percent:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    //implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:wear:27.1.1'
-    compileOnly 'com.google.android.wearable:wearable:2.3.0'
+    //compileOnly 'com.google.android.wearable:wearable:2.3.0'
     implementation 'com.android.support:design:27.1.1'
     implementation 'org.apache.commons:commons-jexl3:3.1'
 }
 
-apply plugin: 'com.google.gms.google-services'
+// Disabled due to dataBinding conflict, used procedures described at:
+// https://issuetracker.google.com/issues/79122163
+// https://medium.com/@samstern_58566/how-to-use-firebase-on-android-without-the-google-services-plugin-93ecc7dc6c4
+// Put strings into values/strings.xml
+//apply plugin: 'com.google.gms.google-services'
+
