--- a/android/BladeBLEWear/app/build.gradle
+++ b/android/BladeBLEWear/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "pw.rfg.bladeblewear"
-        minSdkVersion 24
+        minSdkVersion 26
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -31,6 +31,7 @@ dependencies {
     //compileOnly 'com.google.android.wearable:wearable:2.3.0'
     implementation 'com.android.support:design:27.1.1'
     implementation 'org.apache.commons:commons-jexl3:3.1'
+    implementation 'no.nordicsemi.android:ble:1.1.0'
 }
 
 // Disabled due to dataBinding conflict, used procedures described at:
