--- a/android/BladeBLEWear/app/build.gradle
+++ b/android/BladeBLEWear/app/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     implementation 'com.android.support:support-v4:27.1.1'
     //implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:wear:27.1.1'
-    //compileOnly 'com.google.android.wearable:wearable:2.3.0'
+    compileOnly 'com.google.android.wearable:wearable:2.3.0'
     implementation 'com.android.support:design:27.1.1'
     implementation 'org.apache.commons:commons-jexl3:3.1'
     implementation 'no.nordicsemi.android:ble:1.1.0'
