--- a/android/BladeBLEWear/app/build.gradle
+++ b/android/BladeBLEWear/app/build.gradle
@@ -8,11 +8,12 @@ android {
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     dataBinding.enabled = true
@@ -31,7 +32,8 @@ dependencies {
     compileOnly 'com.google.android.wearable:wearable:2.3.0'
     implementation 'com.android.support:design:27.1.1'
     implementation 'org.apache.commons:commons-jexl3:3.1'
-    implementation 'no.nordicsemi.android:ble:1.1.0'
+    //implementation 'no.nordicsemi.android:ble:1.1.0'
+    //implementation 'com.android.support:multidex:1.0.3'
 }
 
 // Disabled due to dataBinding conflict, used procedures described at:
