--- a/android/BladeBLEWear/app/src/main/AndroidManifest.xml
+++ b/android/BladeBLEWear/app/src/main/AndroidManifest.xml
@@ -5,6 +5,9 @@
     <uses-feature android:name="android.hardware.type.watch" />
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -24,15 +27,15 @@
             android:value="true" />
 
         <activity
-            android:name=".activity.BLEControl"
+            android:name=".activity.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/NoDismiss">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name=".ble.BleService" />
     </application>
 
 </manifest>
