--- a/arduino/rfglow_esp32/platformio.ini
+++ b/arduino/rfglow_esp32/platformio.ini
@@ -8,6 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[env]
+usb_uart_port = /dev/cu.wchusbserial1450
+
 [env:esp-wrover-kit]
 platform = espressif32
 board = esp-wrover-kit
@@ -17,5 +20,6 @@ lib_deps =
   OneButton
 board_build.partitions = min_spiffs.csv
 upload_speed = 460800
-upload_port = /dev/cu.wchusbserial1430
+upload_port = ${env.usb_uart_port}
 monitor_speed = 115200
+monitor_port = ${env.usb_uart_port}
