Mesh stability tests, but these don't work

--- a/arduino/rfglow_esp32/platformio.ini
+++ b/arduino/rfglow_esp32/platformio.ini
@@ -9,15 +9,19 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env]
-usb_uart_port = /dev/cu.wchusbserial1450
+usb_uart_port = /dev/ttyUSB0
 
 [env:esp-wrover-kit]
 platform = espressif32
-board = esp-wrover-kit
+#platform = https://github.com/platformio/platform-espressif32.git#feature/stage
+board = esp32dev
 framework = arduino
 lib_deps = 
   painlessMesh
   OneButton
+  ArduinoTrace
+build_flags =
+  -D ARDUINO_ARCH_ESP32
 board_build.partitions = min_spiffs.csv
 upload_speed = 460800
 upload_port = ${env.usb_uart_port}
