--- a/arduino/rfglow_esp32/platformio.ini
+++ b/arduino/rfglow_esp32/platformio.ini
@@ -11,14 +11,14 @@
 [env]
 usb_uart_port = /dev/ttyUSB0
 
-[env:esp-wrover-kit]
+[env:esp32dev]
 platform = espressif32
 #platform = https://github.com/platformio/platform-espressif32.git#feature/stage
 board = esp32dev
 framework = arduino
 lib_deps = 
-  painlessMesh
   OneButton
+  ArduinoJson
   ArduinoTrace
 build_flags =
   -D ARDUINO_ARCH_ESP32
