Changed double-click, updated android project. vBatLED() can sometimes crash, plus is not accurate if measured while the light is on.

--- a/arduino/rfglow_esp32/platformio.ini
+++ b/arduino/rfglow_esp32/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env]
-usb_uart_port = /dev/ttyUSB0
+usb_uart_port = COM4
 
 [env:esp32dev]
 platform = espressif32
