Update android libraries to newest

--- a/android/BladeBLEWear/app/build.gradle
+++ b/android/BladeBLEWear/app/build.gradle
@@ -3,10 +3,10 @@ apply plugin: 'com.android.application'
 android {
     signingConfigs {
         debug {
-            storeFile file('/home/jkao/.android/debug.keystore')
+            storeFile file("${gradle.gradleUserHomeDir}/../.android/debug.keystore")
         }
         release {
-            storeFile file('/home/jkao/.android/keys/jmk-symbol.jks')
+            storeFile file('/Users/jkao/.android/keys/jmk-symbol.jks')
             storePassword 'password'
             keyAlias = 'key0'
             keyPassword 'password'
@@ -25,7 +25,7 @@ android {
         release {
             minifyEnabled true
             shrinkResources true
-            useProguard true
+            //useProguard true
             signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -35,15 +35,16 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.google.android.support:wearable:2.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.android.support:wearable:2.5.0'
     //implementation 'com.google.android.gms:play-services-wearable:15.0.1'
-    implementation 'com.google.firebase:firebase-core:17.0.0'
-    implementation 'com.google.firebase:firebase-firestore:20.1.0'
+    implementation 'com.google.firebase:firebase-core:17.2.1'
+    implementation 'com.google.firebase:firebase-firestore:21.3.0'
     implementation 'androidx.percentlayout:percentlayout:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     //implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'androidx.wear:wear:1.0.0'
-    compileOnly 'com.google.android.wearable:wearable:2.4.0'
+    compileOnly 'com.google.android.wearable:wearable:2.5.0'
     implementation 'com.google.android.material:material:1.0.0'
     //implementation 'org.mozilla.components:lib-jexl:1.0.0'
     implementation 'org.apache.commons:commons-jexl3:3.1'
