--- a/arduino/rfglow_esp32/platformio.ini
+++ b/arduino/rfglow_esp32/platformio.ini
@@ -9,8 +9,8 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env]
-;usb_uart_port = COM4
-usb_uart_port = /dev/cu.usbserial-1430
+usb_uart_port = COM4
+;usb_uart_port = /dev/cu.usbserial-1430
 
 [env:esp32dev]
 platform = espressif32
